--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,5 @@
     ],
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": false,
-    "python.linting.enabled": true,
-    "python.dataScience.jupyterServerURI": "http://172.16.230.28:8989"
+    "python.linting.enabled": true
 }
